image ko-fi buttion

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         <div class="links">
             <iframe src="https://github.com/sponsors/L-M-Sherlock/button" title="Sponsor L-M-Sherlock" height="32"
                 width="114" style="border: 0; border-radius: 6px;"></iframe>
-            <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-            <script
-                type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'X8X6LQZM4'); kofiwidget2.draw();</script>
+            <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='36' style='border:0px;height:36px;'
+                    src='https://storage.ko-fi.com/cdn/kofi1.png?v=6' border='0'
+                    alt='Buy Me a Coffee at ko-fi.com' /></a>
         </div>
     </div>
 
