--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 
     <div class="section">
         <h2>Support Me</h2>
-        <div class="links">
+        <div style="display: flex; justify-content: center; gap: 10px;">
             <iframe src="https://github.com/sponsors/L-M-Sherlock/button" title="Sponsor L-M-Sherlock" height="32"
                 width="114" style="border: 0; border-radius: 6px;"></iframe>
-            <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='36' style='border:0px;height:36px;'
+            <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='32' style='border:0px;height:32px;'
                     src='https://storage.ko-fi.com/cdn/kofi1.png?v=6' border='0'
                     alt='Buy Me a Coffee at ko-fi.com' /></a>
         </div>
