add link to my personal blog

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         <p>Influencer at ZhiHu with 100k+ followers, focusing on critiquing traditional schooling and sharing methods
             for self-directed learning. Here is my <a href="https://l-m-sherlock.github.io/ZhiHuArchive/"
                 target="_blank">ZhiHu Archive</a>.</p>
+        <p>Check out my <a href="https://l-m-sherlock.notion.site/Blog-132c250163a1801bb232d59e921a5e87"
+                target="_blank">personal blog</a> for more thoughts and experiences.</p>
     </div>
 
     <div class="section">
