--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Jarrett Ye - Personal Website</title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Jarrett Ye">
+    <meta property="og:description" content="Spaced Repetition Algorithm Engineer">
+    <meta property="og:image" content="https://github.com/L-M-Sherlock.png">
+    <meta property="og:url" content="https://l-m-sherlock.github.io">
     <meta name="google-site-verification" content="U7ZAFUgGNK60mmMqaRygg5vy-k8pwbPbDFXNjDCu7Xk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Junyao Ye - Personal Website</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
@@ -80,7 +85,7 @@
         <img src="https://github.com/L-M-Sherlock.png" alt="Junyao Ye" class="avatar">
         <h1 class="name-title">Jarrett Ye (Junyao Ye)</h1>
         <p class="chinese-name">叶峻峣</p>
-        <p>Research Engineer at <a href="https://www.maimemo.com/" target="_blank">Maimemo Inc</a></p>
+        <p>Spaced Repetition Algorithm Engineer</p>
     </div>
 
     <div class="section">
