--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jarrett Ye - Personal Website</title>
     <meta property="og:type" content="website">
     <meta property="og:title" content="Jarrett Ye">
-    <meta property="og:description" content="Spaced Repetition Algorithm Engineer">
+    <meta name="description" property="og:description" content="Spaced Repetition Algorithm Engineer">
     <meta property="og:image" content="https://github.com/L-M-Sherlock.png">
     <meta property="og:url" content="https://l-m-sherlock.github.io">
     <meta name="google-site-verification" content="U7ZAFUgGNK60mmMqaRygg5vy-k8pwbPbDFXNjDCu7Xk" />
