--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Jarrett Ye">
     <meta name="description" property="og:description" content="Spaced Repetition Algorithm Engineer">
-    <meta property="og:image" content="https://github.com/L-M-Sherlock.png">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/32575846?v=4">
     <meta property="og:url" content="https://l-m-sherlock.github.io">
     <meta name="google-site-verification" content="U7ZAFUgGNK60mmMqaRygg5vy-k8pwbPbDFXNjDCu7Xk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,16 +55,6 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .links a {
-            margin: 0 10px;
-            color: #0366d6;
-            text-decoration: none;
-        }
-
-        .links a:hover {
-            text-decoration: underline;
-        }
-
         .github-stats {
             display: flex;
             justify-content: center;
@@ -77,12 +67,24 @@
             max-width: 100%;
             height: auto;
         }
+
+        .github-sponsor {
+            display: inline-flex;
+            align-items: center;
+            height: 32px;
+            padding: 0px 16px;
+            font-size: 14px;
+            font-weight: 500;
+            white-space: nowrap;
+            border-radius: 10px;
+            background-color: rgb(227, 214, 198);
+        }
     </style>
 </head>
 
 <body>
     <div class="header">
-        <img src="https://github.com/L-M-Sherlock.png" alt="Junyao Ye" class="avatar">
+        <img src="https://avatars.githubusercontent.com/u/32575846?v=4" alt="Junyao Ye" class="avatar">
         <h1 class="name-title">Jarrett Ye (Junyao Ye)</h1>
         <p class="chinese-name">叶峻峣</p>
         <p>Spaced Repetition Algorithm Engineer</p>
@@ -127,8 +129,17 @@
     <div class="section">
         <h2>Support Me</h2>
         <div style="display: flex; justify-content: center; gap: 10px;">
-            <iframe src="https://github.com/sponsors/L-M-Sherlock/button" title="Sponsor L-M-Sherlock" height="32"
-                width="114" style="border: 0; border-radius: 6px;"></iframe>
+            <a href="https://github.com/sponsors/L-M-Sherlock" style="color: #24292e; text-decoration: none;">
+                <span class="github-sponsor">
+                    <svg style="margin-right: 8px;" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1"
+                        width="16" fill="#ea4aaa">
+                        <path
+                            d="M8 14.25l.345.666a.75.75 0 01-.69 0l-.008-.004-.018-.01a7.152 7.152 0 01-.31-.17 22.055 22.055 0 01-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 01-3.744 2.584l-.018.01-.006.003h-.002zM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 008 13.393a20.58 20.58 0 003.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 01-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5z">
+                        </path>
+                    </svg>
+                    Sponsor
+                </span>
+            </a>
             <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='32' style='border:0px;height:32px;'
                     src='https://storage.ko-fi.com/cdn/kofi1.png?v=6' border='0'
                     alt='Buy Me a Coffee at ko-fi.com' /></a>
