--- a/index.html
+++ b/index.html
@@ -55,19 +55,6 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .github-stats {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .github-stats img {
-            max-width: 100%;
-            height: auto;
-        }
-
         .github-sponsor {
             display: inline-flex;
             align-items: center;
@@ -140,7 +127,7 @@
                     Sponsor
                 </span>
             </a>
-            <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='32' style='border:0px;height:32px;'
+            <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='32' width="127" style='border:0px;height:32px;'
                     src='https://storage.ko-fi.com/cdn/kofi1.png?v=6' border='0'
                     alt='Buy Me a Coffee at ko-fi.com' /></a>
         </div>
@@ -148,11 +135,11 @@
 
     <div class="section">
         <h2>GitHub Stats</h2>
-        <div class="github-stats">
+        <div>
             <img src="https://github-readme-stats-l-m-sherlock.vercel.app/api?username=L-M-Sherlock&rank_icon=percentile&show_icons=true&theme=transparent&show=reviews&count_private=true&role=OWNER,ORGANIZATION_MEMBER,COLLABORATOR"
-                alt="GitHub Stats">
+                alt="My Github stats" height="200" width="425" />
             <img src="https://github-readme-stats-l-m-sherlock.vercel.app/api/top-langs/?username=L-M-Sherlock&hide=kotlin,java,html,css,Jupyter+Notebook&theme=transparent&layout=donut&role=OWNER,ORGANIZATION_MEMBER"
-                alt="Language Stats">
+                alt="My Language stats" height="200" width="326" />
         </div>
     </div>
 </body>
