--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             display: inline-flex;
             align-items: center;
             height: 32px;
-            padding: 0px 16px;
-            font-size: 14px;
-            font-weight: 500;
+            padding: 0px 6px;
+            font-size: 11px;
+            font-weight: 600;
             white-space: nowrap;
             border-radius: 10px;
             background-color: rgb(227, 214, 198);
@@ -115,7 +115,7 @@
 
     <div class="section">
         <h2>Support Me</h2>
-        <div style="display: flex; justify-content: center; gap: 10px;">
+        <div style="display: flex; justify-content: left; gap: 10px;">
             <a href="https://github.com/sponsors/L-M-Sherlock" style="color: #24292e; text-decoration: none;">
                 <span class="github-sponsor">
                     <svg style="margin-right: 8px;" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1"
@@ -124,11 +124,11 @@
                             d="M8 14.25l.345.666a.75.75 0 01-.69 0l-.008-.004-.018-.01a7.152 7.152 0 01-.31-.17 22.055 22.055 0 01-3.434-2.414C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.045 5.231-3.885 6.818a22.066 22.066 0 01-3.744 2.584l-.018.01-.006.003h-.002zM4.25 2.5c-1.336 0-2.75 1.164-2.75 3 0 2.15 1.58 4.144 3.365 5.682A20.58 20.58 0 008 13.393a20.58 20.58 0 003.135-2.211C12.92 9.644 14.5 7.65 14.5 5.5c0-1.836-1.414-3-2.75-3-1.373 0-2.609.986-3.029 2.456a.749.749 0 01-1.442 0C6.859 3.486 5.623 2.5 4.25 2.5z">
                         </path>
                     </svg>
-                    Sponsor
+                    GitHub Sponsor
                 </span>
             </a>
-            <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='32' width="127" style='border:0px;height:32px;'
-                    src='https://storage.ko-fi.com/cdn/kofi1.png?v=6' border='0'
+            <a href='https://ko-fi.com/X8X6LQZM4' target='_blank'><img height='32' width="127"
+                    style='border:0px;height:32px;' src='https://storage.ko-fi.com/cdn/kofi1.png?v=6' border='0'
                     alt='Buy Me a Coffee at ko-fi.com' /></a>
         </div>
     </div>
