--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jarrett Ye - Personal Website</title>
+    <title>Jarrett Ye - Homepage</title>
     <meta property="og:type" content="website">
     <meta property="og:title" content="Jarrett Ye">
     <meta name="description" property="og:description" content="Spaced Repetition Algorithm Engineer">
