--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="section">
         <h2>About Me</h2>
         <p>Graduate CS major at Harbin Institute of Technology, Shenzhen. Currently working as a research engineer at <a
-                href="https://www.maimemo.com/" target="_blank">Maimemo Inc</a>, focusing on <a
+                href="https://www.maimemo.com/" target="_blank">MaiMemo Inc</a>, focusing on <a
                 href="https://en.wikipedia.org/wiki/Spaced_repetition" target="_blank">spaced repetition</a>
             algorithms and human memory simulation.</p>
         <p>Founder of <a href="https://paratranz.cn/projects/3131" target="_blank">Thoughts Memo</a>, a translation
