Update job title and links in index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <img src="https://avatars.githubusercontent.com/u/32575846?v=4" alt="Junyao Ye" class="avatar">
         <h1 class="name-title">Jarrett Ye (Junyao Ye)</h1>
         <p class="chinese-name">叶峻峣</p>
-        <p>Spaced Repetition Algorithm Engineer</p>
+        <p>Spaced Repetition Memory Algorithm Engineer</p>
     </div>
 
     <div class="section">
@@ -103,9 +103,9 @@
         <h2>Research & Work</h2>
         <ul>
             <li>Developing algorithms for spaced repetition: <a
-                    href="https://github.com/open-spaced-repetition/fsrs4anki" target="_blank">FSRS</a></li>
+                    href="https://github.com/open-spaced-repetition/awesome-fsrs" target="_blank">FSRS</a></li>
             <li>Published papers in <a href="https://www.maimemo.com/paper/" target="_blank">ACM SIGKDD</a> and <a
-                    href="https://www.researchgate.net/publication/369045947_Optimizing_Spaced_Repetition_Schedule_by_Capturing_the_Dynamics_of_Memory"
+                    href="https://scholar.google.com/citations?view_op=view_citation&citation_for_view=S_n2CcIAAAAJ:d1gkVwhDpl0C"
                     target="_blank">IEEE TKDE</a></li>
         </ul>
     </div>
@@ -113,8 +113,7 @@
     <div class="section">
         <h2>Expertise</h2>
         <ul>
-            <li>Spaced Repetition Systems (<a href="https://apps.ankiweb.net/" target="_blank">Anki</a>, <a
-                    href="https://super-memory.com/" target="_blank">SuperMemo</a>)</li>
+            <li>Spaced Repetition Systems</li>
             <li>Educational Technology</li>
             <li>Memory Research</li>
         </ul>
